--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,21 @@
+aioredis==1.3.1
 asgiref==3.3.1
+async-timeout==3.0.1
 attrs==20.3.0
 autobahn==20.12.2
 Automat==20.2.0
 cffi==1.14.4
 channels==3.0.2
+channels-redis==3.2.0
 constantly==15.1.0
 cryptography==3.3.1
 daphne==3.0.1
 Django==3.1.4
+hiredis==1.1.0
 hyperlink==20.0.1
 idna==2.10
 incremental==17.5.0
+msgpack==1.0.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
